--- a/dixceptOfficial/clientapp/package.json
+++ b/dixceptOfficial/clientapp/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "hooper": "^0.3.4",
     "jquery": "^3.6.0",
+    "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
